UIMA-1459 Added checks for null before dereferencing vars
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@798172 13f79535-47bb-0310-9956-ffa450edef68